# opentelemetry-instrumentation-discordpy

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: CONTRIBUTING.md
examples/: advanced_bot.py  basic_bot.py
opentelemetry_instrumentation_discordpy/: __init__.py  decorators.py  instrumentation.py  utils.py
opentelemetry_instrumentation_discordpy/wrappers/: event_listeners.py  message_operations.py
tests/: test_event_listeners.py  test_manual_instrumentation.py  test_message_operations.py
